@@ -8,6 +8,7 @@ import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RunWith(MockitoJUnitRunner.class)
@@ -22,9 +23,8 @@ public class FelineTests {
     @Test
     public void eatMeatReturnCorrectValue() throws Exception {
         Feline feline = new Feline();
-        Mockito.when(animal.getFood("Хищник"))
-                .thenReturn(List.of("Животные", "Птицы", "Рыба"));
-        Assert.assertEquals(feline.eatMeat(), animal.getFood("Хищник"));
+        List<String> expectedFood = Arrays.asList("Животные", "Птицы", "Рыба");
+        Assert.assertEquals(expectedFood, feline.eatMeat());
     }
 
     @Test
@@ -42,7 +42,7 @@ public class FelineTests {
     @Test
     public void getKittensReturnCorrectValue() throws Exception {
         Feline feline = new Feline();
-        Assert.assertEquals(feline.getKittens(), feline.getKittens(1));
+        Assert.assertEquals(feline.getKittens(1), feline.getKittens());
     }
 
     @Test
